@@ -1,0 +1,4 @@
+$NetBSD: distinfo,v 1.1.1.1 2005/04/02 11:23:30 jdolecek Exp $
+
+SHA1 (qca-1.0.tar.bz2) = b4b166f9dbbe222ebaf5287582a0ba29ddbc1391
+Size (qca-1.0.tar.bz2) = 30677 bytes
