@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.9716 2005/04/01 20:00:17 drochner Exp $
+$NetBSD: CHANGES,v 1.9717 2005/04/02 11:26:17 jdolecek Exp $
 
 Changes to the packages collection and infrastructure in 2005:
 
@@ -1859,3 +1859,4 @@ Changes to the packages collection and infrastructure in 2005:
 	Added partysip-2.2.1 [drochner 2005-04-01]
 	Updated scribus to 1.2.1 [drochner 2005-04-01]
 	Updated gimp-ufraw to 0.4 [drochner 2005-04-01]
+	Added qca-1.0 [jdolecek 2005-04-02]
